feat(user): public/private endpoints
