# docs/swagger.json
@@ -11,11 +11,6 @@
     "paths": {
         "/health": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Get the health status of the service",
                 "produces": [
                     "application/json"
@@ -27,12 +22,6 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dvarapala_internal_platform_render.Response"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/dvarapala_internal_platform_render.Response"
                         }
@@ -161,11 +150,6 @@
         },
         "/users/auth": {
             "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Login with email and password to receive a JWT token",
                 "consumes": [
                     "application/json"
